--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="test/test.css">
-    <title>Document</title>
+    <title>alli ibrahim portfolio</title>
     <script src="js/app.js"></script>
 </head>
 
