--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                             <a class="nav-link" href="#works-page">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://docs.google.com/document/d/1kV9me3thg2mI4JevMgTFoq4jdGnPt98z1HADKsid2ZQ/edit" target="_blank">Resume</a>    
+                            <a class="nav-link"
+                                href="https://docs.google.com/document/d/1kV9me3thg2mI4JevMgTFoq4jdGnPt98z1HADKsid2ZQ/edit"
+                                target="_blank">Resume</a>
                         </li>
                         <li class="nav-item last-link">
                             <a class="nav-link" href="#">Contact</a>
@@ -64,20 +66,21 @@
                     designing beautiful and functional user experiences.</p>
             </div>
         </div>
-        <!-- <div class="row"> -->
-        <!-- <div class="col"> -->
+        <!-- Action Buttons -->
         <div class="row action-button no-gutters">
-            <div class="col-lg-6 col">
-                <a href="http://www.linkedin.com/mwlite/me" target="_blank" class="btn btn-lg want-website-btn" style="float:right">I need a website<span><img
-                            src="photos/arrow-angle-pointing-to-right1.png" class="img img-responsive"></span></a>
+            <div class="col-lg-6">
+                <a href="http://www.linkedin.com/mwlite/me" target="_blank" class="btn btn-lg want-website-btn"
+                    style="float:right">I need a website<span><img src="photos/arrow-angle-pointing-to-right1.png"
+                            class="img img-responsive"></span></a>
             </div>
-            <div class="col-lg-6 col">
-                <a href = "mailto: iballi2017@gmail.com" class="btn btn-lg hire-btn">I'm looking to hire<span><img
-                            src="photos/arrow-angle-pointing-to-right1.png" target="_blank" class="img img-responsive"></span></a>
+            <div class="col-lg-6">
+                <a href="mailto: iballi2017@gmail.com" class="btn btn-lg hire-btn">I'm looking to hire<span><img
+                            src="photos/arrow-angle-pointing-to-right1.png" target="_blank"
+                            class="img img-responsive"></span></a>
             </div>
         </div>
-        <!-- </div> -->
-        <!-- </div> -->
+        <!--/ Action Button  -->
+
         <div class="row">
             <div class="col">
                 <ul class="online-contact">
@@ -165,8 +168,7 @@
                 <div class="content">
                     <a href="https://postmailexpress.com" target="_blank">
                         <div class="content-overlay"></div>
-                        <img class="img-fluid content-image"
-                            src="photos/thumbnail1.png">
+                        <img class="img-fluid content-image" src="photos/thumbnail1.png">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">Post Mail Express</h3>
                             <p class="content-text">A delivery service web application</p>
@@ -178,8 +180,7 @@
                 <div class="content">
                     <a href="https://mainlandmeals.com/" target="_blank">
                         <div class="content-overlay"></div>
-                        <img class="img-fluid content-image"
-                            src="photos/thumbnail2.png">
+                        <img class="img-fluid content-image" src="photos/thumbnail2.png">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">Mainland Meals</h3>
                             <p class="content-text">Food ordering web application</p>
@@ -191,8 +192,7 @@
                 <div class="content">
                     <a href="https://iballi2017.github.io/plantcare.github.io/plant-care-resp" target="_blank">
                         <div class="content-overlay"></div>
-                        <img class="img-fluid content-image"
-                            src="photos/thumbnail3.png">
+                        <img class="img-fluid content-image" src="photos/thumbnail3.png">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">Plant Pro</h3>
                             <p class="content-text">Plant care web application landing page sample</p>
@@ -204,8 +204,7 @@
                 <div class="content">
                     <a href="https://iballi2017.github.io/bottomuptech.github.io/index" target="_blank">
                         <div class="content-overlay"></div>
-                        <img class="img-fluid content-image"
-                            src="photos/bottomupimage.png">
+                        <img class="img-fluid content-image" src="photos/bottomupimage.png">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">Bottomup Tech Blog</h3>
                             <p class="content-text">Tech Blog sample page</p>
@@ -214,36 +213,26 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row work-samples no-gutters">
-            <figure class="col-lg-4 figure">
-                <img src="photos/pmethumbnail.png" id="proj-1" alt="pme thumbnail" class="figure-img img-fluid" width="100%">
-                <figcaption style="display: block;" class="figure-caption" id="fig-caption-1"><b class="main-caption"> caption for the above image.</b></figcaption>
-            </figure>
-            <figure class="col-lg-4 figure">
-                <img src="photos/pmethumbnail.png" alt="pme thumbnail" class="figure-img img-fluid" width="100%">
-                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-            </figure>
-            <figure class="col-lg-4 figure">
-                <img src="photos/pmethumbnail.png" alt="pme thumbnail" class="figure-img img-fluid" width="100%">
-                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-            </figure>
-            <figure class="col-lg-4 figure">
-                <img src="photos/pmethumbnail.png" alt="pme thumbnail" class="figure-img img-fluid" width="100%">
-                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-            </figure>
-            <figure class="col-lg-4 figure">
-                <img src="photos/pmethumbnail.png" alt="pme thumbnail" class="figure-img img-fluid" width="100%">
-                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-            </figure>
-            <figure class="col-lg-4 figure">
-                <img src="photos/pmethumbnail.png" alt="pme thumbnail" class="figure-img img-fluid" width="100%">
-                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-            </figure>
-            <figure class="col-lg-4 figure">
-                <img src="photos/pmethumbnail.png" class="figure-img img-fluid rounded" alt="pme thumbnail" width="100%">
-                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-            </figure>
-        </div> -->
+
+        <div class="row" id="works-page">
+            <div class="col">
+                <h1 class="work-title">Contact</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="about-wrapper">
+                    <p>Do you have a question?, do you need to hire a creative Front-End Developer?, or you just want to
+                        say
+                        hello. Don’t hesitate to get in touch via my contact details below.</p>
+                    E-mail: iballi2017@gmail.com or
+                    Call: +234 7065569711, 08024399166.
+                </div>
+            </div>
+        </div>
+
+
 
         <footer class="row">
             <div class="col">
