--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <a href="#"><img src="photos/html5-logo.png" alt="html5 logo" class="img img-responsive"></a>
                     </li>
                     <li class="work-tool">
-                        <a href="#"><img src="photos/angular-logo.png" alt="figma logo" class="img img-responsive"></a>
+                        <a href="#"><img src="photos/angular-logo.png" alt="angular logo" class="img img-responsive"></a>
                     </li>
                     <li class="work-tool">
                         <a href="#"><img src="photos/typescript-logo.png" alt="typescript logo"
