--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap4.2.1/css/bootstrap.min.css">
+    <!-- animate.css -->
+    <link rel="stylesheet" href="./css/animate.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="test/test.css">
@@ -54,14 +56,14 @@
         <div class="row">
             <div class="col">
                 <div class="name">
-                    <h1 class="title">Alli Ibrahim</h1>
-                    <p>Front-end developer</p>
+                    <h1 class="title animated fadeInLeft" style="animation-delay: 1s">Alli Ibrahim</h1>
+                    <p class="animated fadeInRight" style="animation-delay: 1s">Front-end developer</p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <p class="introduction">I am a relentless mind with a passion for writing clean, elegant and efficient
+                <p class="introduction animated fadeIn" style="animation-delay: 2s">I am a relentless mind with a passion for writing clean, elegant and efficient
                     code. I also focus on
                     designing beautiful and functional user experiences.</p>
             </div>
