--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         </div>
         <!-- Action Buttons -->
         <div class="row action-button no-gutters">
-            <div class="col-lg-6">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6">
                 <a href="http://www.linkedin.com/mwlite/me" target="_blank" class="btn btn-lg want-website-btn"
                     style="float:right">I need a website<span><img src="photos/arrow-angle-pointing-to-right1.png"
                             class="img img-responsive"></span></a>
             </div>
-            <div class="col-lg-6">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6">
                 <a href="mailto: iballi2017@gmail.com" class="btn btn-lg hire-btn">I'm looking to hire<span><img
                             src="photos/arrow-angle-pointing-to-right1.png" target="_blank"
                             class="img img-responsive"></span></a>
