--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="row work-samples no-gutters">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="content">
                     <a href="https://postmailexpress.com" target="_blank">
                         <div class="content-overlay"></div>
@@ -178,7 +178,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="content">
                     <a href="https://mainlandmeals.com/" target="_blank">
                         <div class="content-overlay"></div>
@@ -190,7 +190,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="content">
                     <a href="https://iballi2017.github.io/plantcare.github.io/plant-care-resp" target="_blank">
                         <div class="content-overlay"></div>
@@ -202,7 +202,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="content">
                     <a href="https://iballi2017.github.io/bottomuptech.github.io/index" target="_blank">
                         <div class="content-overlay"></div>
